GNU SASL NEWS -- History of user-visible changes.
Copyright (C) 2002-2020 Simon Josefsson
See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.9.0 (unreleased) [beta]

* Version 1.8.1 (released 2019-08-02) [stable]

** gsasl: IMAP client code now permits empty SASL tokens prefixed with '+'.
Normally servers should send '+ '.  Buggy servers include Microsoft
Exchange.  Reported by Adam Sjøgren.

** GSSAPI client: Now retrieves GSASL_AUTHZID for authorization identity.
** GSSAPI client: Can now transmit an empty/missing authorization identity.
See lib/NEWS for more information.

** Build fixes.
Update of gnulib, including how it is bootstrapped.

** i18n: Updated translations.

* Version 1.8.0 (released 2012-05-28) [stable]

** This is a new major stable release.  Brief changes compared to 1.6.x:

*** SAML20 support following RFC 6595.

*** OPENID20 support following RFC 6616.

*** Added SMTP server examples (for e.g., SCRAM, SAML20, OPENID20).

*** Various cleanups, portability and other bug fixes.
See the NEWS entries during the 1.7.x branch for details.

* Version 1.7.6 (released 2012-05-23) [beta]

** i18n: Updated translations.

** Build fixes.

* Version 1.7.5 (released 2012-05-22) [beta]

** i18n: Updated translations.

** Build fixes.

* Version 1.7.4 (released 2012-05-16) [alpha]

** Doc fixes and updates for the callback/property change in the library.
See lib/NEWS for details.  This affects SAML and OpenID.

** Slight fixes to Windows build script.

* Version 1.7.3 (released 2012-04-03) [alpha]

** The SAML20 mechanism has been updated and is now enabled by default.

** Doc fixes and updates for the callback/property change in the library.
See lib/NEWS for details.

** examples: Added example SMTP server with SAML 2.0 support.