@@ -8,6 +8,10 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.9.0 (unreleased) [beta]
 
+** gsasl: If PORT argument is "587" or "submission", SMTP mode is used.
+Further, unrecognized PORT arguments will now on raise an error to
+specify --smtp or --imap.
+
 * Version 1.8.1 (released 2019-08-02) [stable]
 
 ** gsasl: IMAP client code now permits empty SASL tokens prefixed with '+'.
